fix(Styling): tweaked search input and button so works better on mobile

--- a/src/components/SearchBox/_c-search-box.scss
+++ b/src/components/SearchBox/_c-search-box.scss
@@ -23,7 +23,10 @@
 }
 
 .c-search-box__input-wrapper {
-  display: flex;
+  display: grid;
+
+  grid-template-columns: minmax(10rem, 1fr) 7rem;
+  grid-gap: 1rem;
 }
 
 .c-search-box__input {
@@ -31,7 +34,6 @@
   width: 100%;
   height: 3rem;
   padding: .5rem .75rem;
-  margin-right: 1rem;
 
   font-size: 1.5rem;
 
